Simplify build task arguments for MsSqlMigratorUtility in tasks.json

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -259,9 +259,7 @@
             "type": "process",
             "args": [
                 "build",
-                "${workspaceFolder}/util/MsSqlMigratorUtility/MsSqlMigratorUtility.csproj",
-                "/property:GenerateFullPaths=true",
-                "/consoleloggerparameters:NoSummary"
+                "${workspaceFolder}/util/MsSqlMigratorUtility/MsSqlMigratorUtility.csproj"
             ],
             "problemMatcher": "$msCompile",
             "group": {
