--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -580,6 +580,7 @@ jobs:
               ref: 'main',
               inputs: {
                 server_branch: process.env.GITHUB_REF
+                is_workflow_call: 'true'
               }
             });
 
