--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -636,12 +636,14 @@ jobs:
             })
 
   trigger-ephemeral-environment-sync:
+    needs: trigger-ee-updates
     uses: bitwarden/gh-actions/.github/workflows/_ephemeral_environment_manager.yml@main
     with:
       ephemeral_env_branch: process.env.GITHUB_HEAD_REF
       project: server
       sync_environment: true
       pull_request_number: ${{ github.event.number }}
+    secrets: inherit
 
 
   check-failures:
