Resolve the Dependency issues
Signed-off-by: Cy Okeke <cokeke@bitwarden.com>

--- a/src/Billing/Billing.csproj
+++ b/src/Billing/Billing.csproj
@@ -9,6 +9,9 @@
   <ItemGroup>
     <ProjectReference Include="..\SharedWeb\SharedWeb.csproj" />
     <ProjectReference Include="..\Core\Core.csproj" />
+    <PackageReference Include="Quartz" Version="3.13.1" />
+    <PackageReference Include="Quartz.Extensions.Hosting" Version="3.13.1" />
+    <PackageReference Include="Quartz.Extensions.DependencyInjection" Version="3.13.1" />
   </ItemGroup>
 
 </Project>
