--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -654,6 +654,21 @@ jobs:
               }
             })
 
+  trigger-ephemeral-environment-sync:
+    name: Trigger Ephemeral Environment Sync
+    needs: trigger-ee-updates
+    if: |
+      github.event_name == 'pull_request_target'
+      && contains(github.event.pull_request.labels.*.name, 'ephemeral-environment')
+    uses: bitwarden/gh-actions/.github/workflows/_ephemeral_environment_manager.yml@main
+    with:
+      ephemeral_env_branch: process.env.GITHUB_HEAD_REF
+      project: server
+      sync_environment: true
+      pull_request_number: ${{ github.event.number }}
+    secrets: inherit
+
+
   check-failures:
     name: Check for failures
     if: always()
